--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Шапка сайта-->
    <header>
     <nav>
-    <a href="">WEBSTUDIO </a>
+    <p><a href="">WEBSTUDIO</a></p>
     <ul>
         <li>
             <a href="">Studio</a>
@@ -25,7 +25,7 @@
     </nav>
     <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        <li><a href="tel:+11(000)111-11-11">+11(000)111-11-11</a></li>
     </ul>
    </header>
    <main>
@@ -37,7 +37,7 @@
     </section>
     <!--Наші переваги-->
     <section>
-        <h2>Our advantages</h2>
+        <h2>Our features</h2>
         <ul>
             <li>
                 <h3>Strategy
@@ -94,7 +94,8 @@
     </section>
     <!--Команда-->
     <section>
-        <h2>Our Team</h2>
+        <h2>Our Team
+        </h2>
         <ul>
             <li>
                 <img src="./images/team/mark_guerrero.jpg" alt="foto by Mark Guerrero"
