--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Шапка сайта-->
    <header>
     <nav>
-    <p><a href="">WEBSTUDIO</a></p>
+    <a href="">WebStudio</a>
     <ul>
         <li>
             <a href="">Studio</a>
@@ -25,7 +25,7 @@
     </nav>
     <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+11(000)111-11-11">+11(000)111-11-11</a></li>
+        <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
     </ul>
    </header>
    <main>
@@ -129,8 +129,8 @@
     </section>
    </main> 
    <footer>
-        <a href="">WEBSTUDIO </a>
-        <p>Increase the flow of customers sales for your business with digital marketing & growth solutions.
+        <a href="./index.html">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p> 
    </footer>
 </body>
