--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
     </ul>
     </nav>
     <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com
+            </a>
+        </li>
+        <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11
+            </a>
+        </li>
     </ul>
    </header>
    <main>
@@ -130,7 +136,7 @@
    </main> 
    <footer>
         <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions
         </p> 
    </footer>
 </body>
